# rox

./: .gitignore  Cargo.toml  test.rox
script/: cram  promote
src/: ast.rs  env.rs  interpreter.rs  main.rs  parser.rs  parser_pest.rs  parser_ts.rs  rox.pest
test/: intp.t
tests/: basic.test  block.test  variables.test
tree-sitter-rox/: Cargo.toml  binding.gyp  grammar.js  package-lock.json  package.json
tree-sitter-rox/bindings/node/: binding.cc  index.js
tree-sitter-rox/bindings/rust/: lib.rs
tree-sitter-rox/src/: grammar.json  node-types.json  parser.c
tree-sitter-rox/test/corpus/: basic.txt  expr.txt  stmt.txt
