[package]
name = "rox"
version = "0.1.0"
edition = "2021"

[features]
debug = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
color-eyre = "0.6.2"
lazy_static = "1.4.0"
pest = "2.7.7"
pest_derive = "2.7.7"
thiserror = "1.0.57"

[build-dependencies]
cc = "*"
